--- a/fronted/package.json
+++ b/fronted/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^3.0.3",
     "core-js": "^3.6.5",
-    "stackedit-js": "^1.0.7",
+    "highlight.js": "^11.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0"
