--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@toast-ui/vue-editor": "^3.0.3",
     "core-js": "^3.6.5",
     "highlight.js": "^11.2.0",
+    "js-cookie": "^3.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0"
