--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "js-cookie": "^3.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "markdown-it": "^12.2.0",
+    "markdown-it-editor": "^1.1.4",
+    "markdown-it-vue": "^1.1.6",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
