--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^2.1.0",
     "@toast-ui/vue-editor": "^3.0.3",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
-    "element-plus": "^1.1.0-beta.19",
     "highlight.js": "^11.2.0",
     "js-cookie": "^3.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "markdown-it": "^12.2.0",
-    "markdown-it-editor": "^1.1.4",
     "markdown-it-vue": "^1.1.6",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.3",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2",
