bugfix:脚本支持macos系统(darwin)

--- a/.air.toml
+++ b/.air.toml
@@ -2,8 +2,8 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-  bin = "tmp/main.exe"
-  cmd = "go build -o ./tmp/main.exe ."
+  bin = "tmp/main"
+  cmd = "go build -o ./tmp/main ."
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "frontend"]
   exclude_file = []
